--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(dependencies/image-loader)
 add_subdirectory(tr)
+
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} renderer loader)
