Add support for 2D point.
* TODO: Support 3D point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ add_subdirectory(dependencies/image-loader)
 add_subdirectory(tr)
 
 add_executable(${PROJECT_NAME} main.cpp)
-target_link_libraries(${PROJECT_NAME} renderer loader utils)
+target_link_libraries(${PROJECT_NAME} tiny-renderer::renderer loader utils)
